removed spark-streaming dependency and downgraded to slf4 1.6.0 again to mirror latest geotrellis/master, cassandra impl genrally up-to-date, but geotrellis.spark.io.cassandra.CassandraRasterCatalogSpec tst fails for some reason